<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="LOGIN INTENTO"
        android:textColor="#009688"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/Nombre"
        android:textAllCaps="false"
        android:textColor="#130000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtIngNombre"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/IngNombre"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtApellido"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/Password"
        android:textColor="#050000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtIngApellido"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/Apellido"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:text="@string/Ingresar"
        android:textColor="#009688"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

</LinearLayout>